syntax = "proto3";

import "Common.proto";

package proto;

message ClientToWorld_EnterRoom
{
    int64   id = 1;
    string  password = 2;
}

message ClientToWorld_Chat
{
    int64   id = 1;
    string  message = 2;
}