syntax = "proto3";

import "Common.proto";

package proto;

message WorldToClient_EnterRoom
{
    int64   id = 1;
    bool    success = 2;
}

message WorldToClient_Chat
{
    int64   id = 1;
    string  message = 2;
}
